@@ -4,7 +4,7 @@ dnl ===========================================================================
 
 GDK_PIXBUF_REQUIRED=1.3.7
 GLIB_REQUIRED=2.0.0
-LIBART_REQUIRED=2.3.8
+LIBART_REQUIRED=2.3.10
 LIBXML_REQUIRED=2.4.7
 PANGOFT2_REQUIRED=1.0.0
 POPT_REQUIRED=1.5
